添加单元测试

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   icon-position="right">
             按钮
         </g-button>
-
+        <div id="test"></div>
     </div>
 </body>
 <style>
